# grib_api

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.in  README  README.md  acinclude.m4  aclocal.m4  configure  configure.ac  version.sh
data/: budg  julian.out.good
data/tigge/: tigge_ammc_pl_gh.grib  tigge_ammc_pl_q.grib  tigge_ammc_pl_t.grib  tigge_ammc_pl_u.grib  tigge_ammc_pl_v.grib  tigge_ammc_sfc_10u.grib  tigge_ammc_sfc_10v.grib  tigge_ammc_sfc_2t.grib  tigge_ammc_sfc_lsm.grib  tigge_ammc_sfc_mn2t6.grib  tigge_ammc_sfc_msl.grib  tigge_ammc_sfc_mx2t6.grib  tigge_ammc_sfc_orog.grib  tigge_ammc_sfc_sf.grib  tigge_ammc_sfc_sp.grib  tigge_ammc_sfc_st.grib  tigge_ammc_sfc_tcc.grib  tigge_ammc_sfc_tcw.grib  tigge_ammc_sfc_tp.grib  tigge_babj_pl_gh.grib  tigge_babj_pl_q.grib  tigge_babj_pl_t.grib  tigge_babj_pl_u.grib  tigge_babj_pl_v.grib  tigge_babj_sfc_10u.grib  tigge_babj_sfc_10v.grib  tigge_babj_sfc_2d.grib  tigge_babj_sfc_2t.grib  tigge_babj_sfc_lsm.grib  tigge_babj_sfc_mn2t6.grib  tigge_babj_sfc_msl.grib  tigge_babj_sfc_mx2t6.grib  tigge_babj_sfc_orog.grib  tigge_babj_sfc_sd.grib  tigge_babj_sfc_sf.grib  tigge_babj_sfc_slhf.grib  tigge_babj_sfc_sp.grib  tigge_babj_sfc_sshf.grib  tigge_babj_sfc_ssr.grib  tigge_babj_sfc_str.grib  (+197 more)
definitions/: Makefile.am  Makefile.in  boot.def  installDefinitions.sh  mars_param.table  param_id.table  publish_new_parameters.sh
definitions/budg/: boot.def  mars_labeling.def  section.1.def  section.4.def
definitions/common/: statistics_grid.def  statistics_spectral.def
definitions/grib1/: 0.table  2.0.2.table  2.0.3.table  2.98.131.table  2.98.132.table  2.98.140.table  2.98.150.table  2.98.151.table  2.98.160.table  2.98.162.table  2.98.171.table  2.98.172.table  2.98.173.table  2.98.174.table  2.98.175.table  2.98.210.table  2.98.220.table  2.98.228.table  2.98.230.table  3.table  5.table  boot.def  data.grid_ieee.def  data.grid_second_order.def  data.grid_second_order_constant_width.def  data.grid_second_order_general_grib1.def  data.grid_second_order_row_by_row.def  data.grid_simple.def  data.grid_simple_matrix.def  data.spectral_complex.def  data.spectral_ieee.def  data.spectral_simple.def  gds_not_present_bitmap.def  grid_21.def  grid_22.def  grid_23.def  grid_24.def  grid_25.def  grid_26.def  grid_61.def  (+98 more)
definitions/grib2/: boot.def  boot_multifield.def  dimensionType.table  grib2LocalSectionNumber.98.table  local.98.15.def  local.98.16.def  local.98.18.def  local.98.20.def  local.98.23.def  local.98.25.def  (+154 more)
fortran/: Makefile.am  Makefile.in  create_grib_f90.sh  grib_api_externals.h  grib_api_f77.h  grib_api_visibility.h  grib_f77.c  grib_f90.f90  grib_f90.f90.head  grib_f90.f90.tail  grib_fortran.c  grib_fortran_kinds.c  grib_fortran_prototypes.h  same_int_long
html/: clone_8f90-example.html  copy__message_8f90-example.html  files.html  get_8c-example.html  get_8f90-example.html  get__data_8f90-example.html  get__fortran_8_f-example.html  get__pl_8f90-example.html  get__pv_8f90-example.html  grib__api_8h.html  grib_debug.html  grib_dump.html  iterator_8c-example.html  iterator__fortran_8_f-example.html  keys__iterator_8c-example.html  keys__iterator_8f90-example.html  keys__iterator__fortran_8_f-example.html  multi_8c-example.html  multi_8f90-example.html  multi__fortran_8_f-example.html  nearest_8c-example.html  nearest_8f90-example.html  precision_8c-example.html  precision_8f90-example.html  precision__fortran_8_f-example.html  print__data_8c-example.html  print__data_8f90-example.html  print__data__fortran_8_f-example.html  set_8c-example.html  set_8f90-example.html  set__bitmap_8f90-example.html  set__fortran_8_f-example.html  set__missing_8f90-example.html  set__pv_8f90-example.html
perl/: Makefile.in
python/: Makefile.am  Makefile.in  grib_interface.c  grib_interface.h  gribapi.py  gribapi_swig.i  gribapi_swig_wrap.c  setup.py.in  swig_wrap_array.c  swig_wrap_array.py  swig_wrap_numpy.py
samples/: Makefile.am  Makefile.in  reduced_gg_ml_grib2.tmpl  regular_gg_pl_grib2.tmpl
src/: Makefile.am  Makefile.in  action.c  action_class_alias.c  action_class_assert.c  action_class_concept.c  action_class_gen.c  action_class_if.c  action_class_list.c  action_class_meta.c  action_class_modify.c  action_class_noop.c  action_class_print.c  action_class_put.c  action_class_remove.c  action_class_section.c  action_class_set.c  action_class_set_darray.c  action_class_set_iarray.c  action_class_set_missing.c  action_class_switch.c  action_class_template.c  action_class_trigger.c  action_class_variable.c  action_class_when.c  action_class_while.c  action_class_write.c  compile.c  config.h.in  grib_2order_packer_simple.c  grib_accessor.c  grib_accessor_class.c  grib_accessor_class.h  grib_accessor_class_abstract_long_vector.c  grib_accessor_class_abstract_vector.c  grib_accessor_class_array.c  grib_accessor_class_ascii.c  grib_accessor_class_assert.c  grib_accessor_class_bit.c  grib_accessor_class_bitmap.c  (+252 more)
tests/: Makefile.am  Makefile.in  badgrib.sh  bitmap.sh  bitsPerValue.sh  bpv_limit.c  budg.sh  change_scanning.sh  compare.sh  concept.sh  convert.sh  debug.sh  decimalPrecision.sh  definitions.sh  double_cmp.c  filter.sh  gauss_sub.c  get_fail.sh  grib1to2.sh  grib2to1.sh  gribex_perf.c  gridType.sh  ieee.sh  include.sh  index.c  index.sh  iterator.sh  jpeg.sh  jpeg_perf.c  julian.c  julian.sh  laplacian.c  level.sh  list.sh  local.sh  ls.sh  missing.sh  multi.sh  multi_from_message.c  multi_from_message.sh  (+14 more)
tigge/: Makefile.am  Makefile.in  tigge_accumulations.c  tigge_check.c  tigge_check.h  tigge_name.c  tigge_split.c
tools/: Makefile.am  Makefile.in  all_keys.c  big2gribex.c  gaussian.c  grib1to2.txt  grib2ppm.c  grib_add.c  grib_cmp.c  grib_compare.c  grib_convert.c  grib_copy.c  grib_count.c  grib_debug.c  grib_diff.c  grib_distance.c  grib_dump.c  grib_error.c  grib_filter.c  grib_get.c  grib_get_data.c  grib_histogram.c  grib_index_build.c  grib_info.c  grib_keys.c  grib_ls.c  grib_msg_types.h  grib_options.c  grib_packing.c  grib_set.c  grib_tools.c  grib_tools.h  list_keys.c  mars_request.c  parser.c  xref.c
(+198 files in other folders)
